# maverick

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PR_SUMMARY.md  README.md  demo_step_execution.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: coverage.yml  publish_pypi.yml  publish_testpypi.yml  python-publish.yml  testing_and_coverage.yml
docs/source/: api_reference.rst  complete_example.rst  conf.py  custom_players.rst  getting_started.ipynb  index.rst  maverick_nlhe_rules_and_edge_cases.md  overview.md  player_archetypes.rst  poker_fundamentals.md  texas_holdem_rules.rst
docs/source/dev_guide/: changes_and_versioning.md  coding_conventions.md  contribution_workflow.md  dev_installation.md  documentation.md  git_cookbook.md  gitflow_and_branching.md  index.rst  testing_and_coverage.md
docs/source/examples/: advanced_custom_player.ipynb  game_history_for_llm.ipynb  index.rst  llm_as_player.ipynb  most_successful_strategy.ipynb
docs/source/user_guide/: betting_rules.md  builtin_players.md  core_concepts.ipynb  custom_players.ipynb  events.ipynb  games.ipynb  index.rst  reproducibility.ipynb  scoring_and_estimation.ipynb
examples/: README.md  demo_event_system.py
sandbox/: advanced_custom_player.ipynb  archetypes_showdown.ipynb  custom_player_tutorial.ipynb  event_listeners_example.ipynb  game_example.ipynb  game_example_omaha.ipynb  hand_strength_estimation.ipynb  llm_as_player.ipynb  poker_hand_evaluator.ipynb  prompt.md  scoring_and_estimation.ipynb  step_by_step_execution.ipynb  test_game.ipynb  test_pokerengine.ipynb  test_scorer.ipynb
sandbox/_legacy/: context.py  cv.py  enums.py  imageai_poker_card.py  mpl.py  number_from_image.py  ocr.py  pokerwidget.py  scrape_poker_cards.py  screen.py
src/maverick/: __init__.py  card.py  deck.py  enums.py  eventbus.py  events.py  game.py  hand.py  holding.py  player.py  playeraction.py  playerstate.py  protocol.py  rules.py  scoring.py  state.py  table.py
src/maverick/players/: __init__.py  (+3 more)
tests/: test_additional_coverage.py  test_archetypes.py  test_betting_semantics.py  test_comprehensive_coverage.py  test_deck.py  test_edge_cases_final.py  test_event_system.py  test_final_push.py  test_first_button.py  test_game.py  test_game_flow_edge_cases.py  test_hand.py  test_handtype.py  test_integration_games.py  test_scorer.py  test_scoring.py  test_serialization.py  test_smoke.py  test_step_execution.py  test_table.py
(+20 files in other folders)
