[project]
name = "maverick"
version = "0.1.0"
description = "Utilities for a poker-playing assistant"
readme = "README.md"
authors = [
    { name = "Bence Balogh", email = "benceeok@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pypokerengine>=1.0.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "sphinx>=9.1.0",
    "pydata-sphinx-theme>=0.16.0",
]
