[project]
name = "maverick"
version = "0.1.0"
description = "Utilities for a poker-playing assistant"
readme = "README.md"
authors = [
    { name = "Bence Balogh", email = "benceeok@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "matplotlib>=3.10.8",
    "scipy>=1.16.3",
    "pytest-cov>=7.0.0",
]
docs = [
    "linkify-it-py>=2.0.3",
    "myst-nb>=1.3.0",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx-copybutton>=0.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
